force-app/main/default/objects/PolymorphicJoin__c/PolymorphicJoin__c.object-meta.xml
<CustomObject>
    <label>Polymorphic Join</label>
    <nameField>
        <label>Polymorphic Join Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polymorphic Joins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>