force-app/main/default/objects/PolymorphicJoin__c/fields/LookupObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>LookupObjectAPIName__c</fullName>
    <label>Lookup Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>