force-app/main/default/objects/PolymorphicJoin__c/fields/LookupRecordId__c.field-meta.xml
<CustomField>
    <fullName>LookupRecordId__c</fullName>
    <label>Lookup Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>