force-app/main/default/objects/PolymorphicJoin__c/fields/NameField__c.field-meta.xml
<CustomField>
    <fullName>NameField__c</fullName>
    <label>Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>