force-app/main/default/objects/PolymorphicJoin__c/fields/PolymorphicJoin__c.field-meta.xml
<CustomField>
    <fullName>PolymorphicJoin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PolymorphicJoin(For Testing)</label>
    <referenceTo>PolymorphicJoin__c</referenceTo>
    <relationshipLabel>Polymorphic Joins</relationshipLabel>
    <relationshipName>Polymorphic_Joins</relationshipName>
    <type>Lookup</type>
</CustomField>